config/server/deployment.yaml
# Copyright 2020 The Tekton Authors
#
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#      http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

apiVersion: apps/v1
kind: Deployment
metadata:
  name: server
  labels:
    app.kubernetes.io/name: tekton-results-server
spec:
  replicas: 1
  selector:
    matchLabels:
      app.kubernetes.io/name: tekton-results-server
  template:
    metadata:
      annotations:
        cluster-autoscaler.kubernetes.io/safe-to-evict: "false"
      labels:
        app.kubernetes.io/name: tekton-results-server
    spec:
      containers:
        - name: server
          image: server
          args:
            - --api-auth=$(API_AUTH)
            - --db-host=$(DB_HOST)
            - --db-name=$(DB_NAME)
            - --db-user=$(DB_USER)
            - --db-password=$(DB_PASSWORD)
            - --kube-server=$(KUBE_SERVER)
            - --kube-ca=$(KUBE_CA)
          ports:
            - name: grpc
              containerPort: 50051
            - name: rest
              containerPort: 8080
            - name: prom
              containerPort: 9090
          volumeMounts:
            - name: tls
              mountPath: "/etc/tls"
              readOnly: true
      volumes:
        - name: tls
          secret:
            secretName: tls
